--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ license=GPLv3+
 description=
 long_description=file: README.md
 long_description_content_type=text/markdown
-author=Jason Zielinski
+author=John Comonitski
 author_email=
 keywords=
     utilities
